# greenwashing-review

./: .gitignore  EVALUATION-SOP.md  INSTALL.md  MAINTENANCE.md  NOTICE  PLAN.md  README.md  mcp-config-example.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
corpus/verified/EU/: directives-catalog.csv
corpus/verified/KR/: KR-ENV-TECH-ACT@2026-06-09.json  KR-ENV-TECH-DECREE@2026-03-19.json  KR-FAIR-LABELING-ACT@2025-01-21.json  KR-FAIR-LABELING-DECREE@2026-07-01.json  KR-KFTC-ENV-AD-GUIDELINE-2023@2023-09-01.json  KR-KFTC-ENV-AD-GUIDELINE-2023@41ba3624c07c.json  KR-ME-ENV-CLAIMS-NOTICE-2025@0f1a244bb069.json  KR-ME-ENV-CLAIMS-NOTICE-2025@2025-10-07.json  decisions-catalog.csv  manifest.json
corpus/verified/UK/: asa-rulings-catalog.csv
examples/sample-matter/: context.yaml
greenwashing/: __init__.py  analysis.py  approval.py  asa_rulings.py  benchmark.py  benchmark_docs.py  cli.py  context.py  corpus.py  corroboration.py  database.py  decision_index.py  docx_report.py  eu_directives.py  extractors.py  ftc_decisions.py  ftc_us_cases.py  green_terms.py  html_report.py  korean_corpus.py  llm_extraction.py  maintenance.py  markdown_docs.py  mcp_remote.py  mcp_server.py  models.py  precedents.py  verification.py  workbooks.py
greenwashing/data/: corpus_seed.json  kr_official_sources.json  maintenance_registry.json
ops/: com.greenwashing.monthly.plist  com.greenwashing.weekly.plist
scripts/: package.sh  run_maintenance.sh
skills/greenwashing-benchmark/: SKILL.md
skills/greenwashing-review/: SKILL.md
tests/: test_analysis.py  test_benchmark.py  test_corpus_and_approval.py  test_evaluation_quality.py  test_llm_extraction.py
(+2 files in other folders)
