[project]
name = "greenwashing-counsel"
version = "0.1.0"
description = "한국법 중심 그린워싱 평가·신고/고발 초안 생성기"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pypdf>=4.0",
    "python-pptx>=0.6",
    "numpy>=1.24",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]   # 로컬 stdio MCP 서버(greenwashing-mcp)용

[project.scripts]
gw = "greenwashing.cli:main"
greenwashing-mcp = "greenwashing.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

